test: Add tap-xunit and flatten results for junit output
This change tests `tap-xunit` as a way to generate a junit
report. `tap-xunit` does not parse failures on subtests
properly, so flatten them in order to see the full failure
details which are important. The `tap-mocha-reporter`, which
we normally use, does not properly include the failure details,
so `tap-xunit` is a viable replacement.

Semver: patch

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A node.js version of unix's `tail -f` command",
   "main": "index.js",
   "scripts": {
+    "test:ci": "tools/test-ci.sh",
     "test": "tap",
     "lint": "eslint ./",
     "pretest": "npm run lint"
@@ -51,7 +52,8 @@
     "eslint": "^7.10.0",
     "eslint-config-logdna": "^2.0.0",
     "husky": "^4.3.0",
-    "tap": "^14.10.7"
+    "tap": "^14.10.7",
+    "tap-xunit": "^2.4.1"
   },
   "tap": {
     "100": true,
@@ -75,7 +77,7 @@
     "files": [
       "test/**/*.js"
     ],
-    "output-file": ".tap-output"
+    "output-file": "coverage/.tap-output"
   },
   "husky": {
     "hooks": {
