--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.2",
   "description": "A node.js version of unix's `tail -f` command",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test:ci": "tools/test-ci.sh",
     "test": "tap",
